err.txt
   Compiling agam_codegen v0.1.0 (C:\Projects\agam\crates\agam_codegen)
   Compiling agam_driver v0.1.0 (C:\Projects\agam\crates\agam_driver)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 1.05s
     Running `target\debug\agamc.exe build bench_advanced.agam -v -O 2`
[agamc] Building 1 file(s)...
[agamc] Optimization level: O2
[agamc] Read bench_advanced.agam (3150 bytes)
[agamc] Lexed 614 tokens
[agamc] Parsed 6 declarations
[agamc] Lowered to HIR: 6 functions
[agamc] Lowered to MIR: 6 functions
[agamc] Generated C code: bench_advanced.c (9571 bytes)
error: C compilation failed:
bench_advanced.c:351:1: error: unknown type name 'SYNTAX'
  351 | SYNTAX ERROR TO KEEP C FILE
      | ^~~~~~
bench_advanced.c:351:14: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'TO'
  351 | SYNTAX ERROR TO KEEP C FILE
      |              ^~
bench_advanced.c:351:14: error: unknown type name 'TO'

error: process didn't exit successfully: `target\debug\agamc.exe build bench_advanced.agam -v -O 2` (exit code: 1)
